--- a/config/sync/rest.resource.entity.entity_view_mode.yml
+++ b/config/sync/rest.resource.entity.entity_view_mode.yml
@@ -1,6 +1,6 @@
 uuid: 7f1c0e79-662c-4df4-9e4a-4b956d7df620
 langcode: en
-status: true
+status: false
 dependencies:
   module:
     - serialization
