--- a/config/sync/core.entity_form_display.node.post.default.yml
+++ b/config/sync/core.entity_form_display.node.post.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.post.field_caption
+    - field.field.node.post.field_category
     - field.field.node.post.field_picture
     - image.style.thumbnail
     - node.type.post
@@ -29,6 +30,16 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: text_textarea
+    region: content
+  field_category:
+    weight: 124
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
     region: content
   field_picture:
     weight: 123
