--- a/config/sync/rest.resource.entity.file.yml
+++ b/config/sync/rest.resource.entity.file.yml
@@ -1,17 +1,20 @@
-uuid: daebf7a5-6fe8-4cf7-830b-0f5e8fc79b4c
+uuid: a210502f-e309-443d-880a-0264a16a834c
 langcode: en
-status: false
+status: true
 dependencies:
   module:
+    - file
     - serialization
     - user
-    - views
-id: entity.view
-plugin_id: 'entity:view'
+id: entity.file
+plugin_id: 'entity:file'
 granularity: resource
 configuration:
   methods:
     - GET
+    - POST
+    - DELETE
+    - PATCH
   formats:
     - json
   authentication:
