Config API upload image

--- a/composer.json
+++ b/composer.json
@@ -24,13 +24,14 @@
         "drupal/core-project-message": "^9.1",
         "drupal/core-recommended": "^9.1",
         "drupal/devel": "^4.1",
+        "drupal/file_entity": "^2.0@beta",
         "drupal/restui": "^1.19",
         "drush/drush": "^10.4"
     },
     "conflict": {
         "drupal/drupal": "*"
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
         "sort-packages": true
